overflow fixed

--- a/components/home/styles/upcomeingEvents.module.css
+++ b/components/home/styles/upcomeingEvents.module.css
@@ -11,20 +11,17 @@
     color: #da0909e3;
 }
 .eventContainer{
-    /* padding: 10px;
+    padding: 10px;
     background-color: #f6faff;
     margin-left: 10px;
     margin-right: 10px;
-    border-radius: 10px; */
-    width: 400px;
+    border-radius: 10px;
     flex-shrink: 0;
-    /* min-width: 300px; */
+    flex-basis: 300px;
 }
 .upcomeingEventS{
     display: flex;
-    /* margin-top: 20px; */
     overflow: auto;
-    /* width: 100%; */
 }
 .upcomeingEventsContainer{
     margin-top: 50px;
